--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Đại học hạ long | khoa công nghệ thông tin" />
         <meta property="og:description" content="Khoa CNTT là địa chỉ duy nhất đào tạo CNTT trình độ Đại học trên địa bàn Tỉnh. " />
-        <meta property="og:url" content="https://hongichik.github.io/CNTTDaiHocHaLong" />
-        <meta property="og:image" content="https://hongichik.github.io/CNTTDaiHocHaLong/img/Logo-Dai-Hoc-Ha-Long-UHL-V.png" />
+        <meta property="og:url" content="https://hongichik.github.io/CNTTDaiHocHaLongUHL" />
+        <meta property="og:image" content="https://hongichik.github.io/CNTTDaiHocHaLongUHL/img/Logo-Dai-Hoc-Ha-Long-UHL-V.png" />
         <meta property="og:site_name" content="Trường đại học hạ long " />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Đại học hạ long | khoa công nghệ thông tin" />
         <meta name="twitter:description" content="Khoa CNTT là địa chỉ duy nhất đào tạo CNTT trình độ Đại học trên địa bàn Tỉnh. " />
-        <meta name="twitter:image" content="https://hongichik.github.io/CNTTDaiHocHaLong/img/Logo-Dai-Hoc-Ha-Long-UHL-V.png" />
+        <meta name="twitter:image" content="https://hongichik.github.io/CNTTDaiHocHaLongUHL/img/Logo-Dai-Hoc-Ha-Long-UHL-V.png" />
         <meta name="theme-color" content="#0086cd" />
 
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
