--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <title>Đại học hạ long</title>
     </head>
 <body>
-    <h1 style="color: #0086cd;">demo đầu tiên đã sửa sửa sửa đã sửa</h1>
+    <h1 style="color: #0086cd;">Trường đại học hạ long</h1>
 </body>
 </html>
