edit url sideshow

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="/img/sideshow1.jpg"
+                            <img class="d-block w-100" src="img/sideshow1.jpg"
                                 alt="First slide">
                         </div>
                         <div class="carousel-item">
