--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 
         <!-- end bootstrap -->
 
-        <script src="https://code.jquery.com/jquery-3.6.1.js"
-            integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
-            crossorigin="anonymous"></script>
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
         <script src="js/public.js"></script>
 
         <link rel="stylesheet" href="css/public.css">
@@ -109,7 +110,7 @@
                 </div>
 
             </div>
-            <div class="d-md-flex d-none">
+            <div class="d-md-flex d-none header-between">
                 <div class="container d-flex align-items-center
                     justify-content-between">
                     <div class="d-flex p-2">
@@ -311,9 +312,10 @@
                 </div>
             </div>
         </nav>
-        <var class="d-flex flex-column container pt-3">
-            <div class="d-flex flex-wrap">
-                <div class=" col-md-7 col-12 p-0 d-flex flex-column">
+        <nav class="d-flex flex-column py-3" style="background-color: rgb(247,
+            251, 255);">
+            <div class="d-flex flex-wrap container">
+                <div class=" col-md-7 col-12 px-0 pt-2 d-flex flex-column">
                     <h1 class="txt-blue-2">Tin tức</h1>
                     <div class="d-flex flex-column">
                         <div class="d-flex flex-wrap">
@@ -377,15 +379,224 @@
                             </div>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="">xem tất cả</a>
+                    </div>
                 </div>
-                <div class="bg-gray-coler-2 col-md-5 col-12">
-                    <h1>nội dung 2</h1>
-                </div>
-            </div>
-            <div>
-                <h3>nội dung3</h3>
-            </div>
-        </var>
-    </body>
+                <div class="shadow pt-2 mt-1 col-md-5 col-12 d-flex
+                    flex-column">
+                    <h1 class="txt-blue-2">Sự kiện</h1>
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-wrap">
+                            <a href="#" class="pb-2 px-2 col-12">
+                                <img src="img/tintuc1.jpg" alt=""
+                                    class=" p-0 m-0 w-100 shadow rounded"
+                                    style="aspect-ratio: 2/1;object-fit:
+                                    cover;">
+                            </a>
 
-</html>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-wrap">
+                            <div class="pb-2 px-2">
+                                <div class="d-flex flex-column border rounded
+                                    shadow">
+                                    <p style="background-color: #ffed89;
+                                        font-weight: bold; font-size: 0.5rem;
+                                        border-bottom: 0.05rem solid rgb(150,
+                                        150, 150); color: var(--blue-coler-2);"
+                                        class="px-1 py-0 m-auto">Tháng 1</p>
+                                    <p style="font-size: 1rem; background-color:
+                                        #ff3434; color: white;"
+                                        class="rounded-bottom text-center m-0
+                                        font-weight-bold">27</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex flex-column col-8 col-md-8 p-0">
+                                <h3 class="txt-blue-2 d-flex"><a class="mt-1"
+                                        href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a></h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-wrap">
+                            <div class="pb-2 px-2">
+                                <div class="d-flex flex-column border rounded
+                                    shadow">
+                                    <p style="background-color: #ffed89;
+                                        font-weight: bold; font-size: 0.5rem;
+                                        border-bottom: 0.05rem solid rgb(150,
+                                        150, 150); color: var(--blue-coler-2);"
+                                        class="px-1 py-0 m-auto">Tháng 1</p>
+                                    <p style="font-size: 1rem; background-color:
+                                        #ff3434; color: white;"
+                                        class="rounded-bottom text-center m-0
+                                        font-weight-bold">27</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex flex-column col-8 col-md-8 p-0">
+                                <h3 class="txt-blue-2 d-flex"><a class="mt-1"
+                                        href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a></h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column">
+                        <div class="d-flex flex-wrap">
+                            <div class="pb-2 px-2">
+                                <div class="d-flex flex-column border rounded
+                                    shadow">
+                                    <p style="background-color: #ffed89;
+                                        font-weight: bold; font-size: 0.5rem;
+                                        border-bottom: 0.05rem solid rgb(150,
+                                        150, 150); color: var(--blue-coler-2);"
+                                        class="px-1 py-0 m-auto">Tháng 1</p>
+                                    <p style="font-size: 1rem; background-color:
+                                        #ff3434; color: white;"
+                                        class="rounded-bottom text-center m-0
+                                        font-weight-bold">27</p>
+                                </div>
+                            </div>
+
+                            <div class="d-flex flex-column col-8 col-md-8 p-0">
+                                <h3 class="txt-blue-2 d-flex"><a class="mt-1"
+                                        href="">Tiêu đềềTiêu đềTiêu đềTiêu đ</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center pb-2">
+                        <a href="">xem tất cả</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <nav class="pt-3 pb-4">
+            <div class="container d-flex flex-column">
+                <h1 class="txt-blue-2 text-center pt-3">Chương trình đào tạo</h1>
+                <div class="underlined_div"></div>
+                <p class="text-center txt-blue-3 mt-3">
+                    tự hào mang đến môi trường giáo dục quốc tế với các chương
+                    trình giảng dạy bằng tiếng Anh và những ngành đào tạo khoa
+                    học công nghệ dẫn đầu xu hướng nguồn nhân lực thời đại 4.0
+                </p>
+                <div class="d-flex flex-wrap">
+                    <div class="col-md-6 col-12 d-flex" style="
+                        background-image: linear-gradient(#0000002e,
+                        #0000002e),url(img/tintuc1.jpg);
+                        height: 25rem;
+                        width: 100%; background-position: center;
+                        background-repeat: no-repeat; background-size: cover;
+                        ">
+                        <div style="width: 15rem; height: 6rem;
+                            background-color: #0086cdc2;" class="d-flex
+                            flex-column m-auto rounded shadow-lg">
+
+                            <div class="m-auto">
+                                <h2 class=" font-weight-bold txt-gray-1">Khoa
+                                    học máy tính </h2>
+                                <p class="m-0 txt-gray-1 text-center"
+                                    style="font-size: 0.65rem;">nội dung nội
+                                    dung</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-12 d-flex flex-column p-0">
+                        <div class="d-flex w-100 h-50" style="
+                            background-image: url(img/tintuc1.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat; background-size:
+                            cover;">
+                            <div style="width: 15rem; height: 6rem;
+                                background-color: #0086cdc2;" class="d-flex
+                                flex-column m-auto rounded shadow-lg">
+
+                                <div class="m-auto">
+                                    <h2 class=" font-weight-bold txt-gray-1">Khoa
+                                        học máy tính </h2>
+                                    <p class="m-0 txt-gray-1 text-center"
+                                        style="font-size: 0.65rem;">nội dung nội
+                                        dung</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="d-flex w-100 h-50" style="
+                            background-image:
+                            url(img/tintuc1.jpg);background-position: center;
+                            background-repeat: no-repeat; background-size:
+                            cover;">
+                            <div style="width: 15rem; height: 6rem;
+                                background-color: #0086cdc2;" class="d-flex
+                                flex-column m-auto rounded shadow-lg">
+
+                                <div class="m-auto">
+                                    <h2 class=" font-weight-bold txt-gray-1">Khoa
+                                        học máy tính </h2>
+                                    <p class="m-0 txt-gray-1 text-center"
+                                        style="font-size: 0.65rem;">nội dung nội
+                                        dung</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <nav>
+                <div style="background: linear-gradient(#ffffffbd,
+                    #ffffffbd), url(img/sideshow2.jpg) fixed 50% 50%;
+                    background-size: cover;
+                    height: 10rem; width: 100%;">
+                    <div class="container d-flex flex-column">
+                        <h1 class="txt-blue-3 text-center pt-3">Đăng ký nhập học</h1>
+                        <div class="underlined_div"></div>
+                        <p class="text-center txt-blue-3 mt-3">
+                            tự hào mang đến môi trường giáo dục quốc tế với các
+                            chương
+                            trình giảng dạy bằng tiếng Anh và những ngành đào
+                            tạo khoa
+                            học công nghệ dẫn đầu xu hướng nguồn nhân lực thời
+                            đại 4.0
+                        </p>
+                        <div class="d-flex w-100">
+                            <button type="button" style="font-size: 0.65rem;"
+                                class="m-auto btn btn-danger">Đăng ký ngay</button>
+                        </div>
+
+                    </div>
+                </div>
+            </nav>
+            <div class="container">
+                <h2 class="text-center font-weight-bold">Our Partners</h2>
+                <section class="customer-logos slider">
+                    <div class="slide"><img src="img/adidas.png" alt="logo"></div>
+                    <div class="slide"><img src="img/facebook.png" alt="logo"></div>
+                    <div class="slide"><img src="img/google.png" alt="logo"></div>
+                    <div class="slide"><img src="img/instagram.png" alt="logo"></div>
+                    <div class="slide"><img src="img/nike.png" alt="logo"></div>
+                    <div class="slide"><img src="img/twitter.png" alt="logo"></div>
+                    <div class="slide"><img src="img/uber.png" alt="logo"></div>
+                    <div class="slide"><img src="img/youtube.png" alt="logo"></div>
+                </section>
+            </div>
+
+            <p class="copy text-center font-weight-bold">All Rights Reserved
+                &copy; Make Dev</p>
+
+
+            <script>
+    
+
+
+    </script>
+            <nav style="height: 500px;">
+
+            </nav>
+        </body>
+
+    </html>
