--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
     <body>
         <nav class="header">
-            <div class="d-lg-flex d-none flex-column demo" style="background-image:
+            <div class="d-lg-flex d-none flex-column demo"
+                style="background-image:
                 linear-gradient(#00000028, #00000028), url(img/header.jpg);
                 background-repeat: no-repeat; background-size: 100%;">
                 <div class="d-flex pt-2 pr-2
@@ -243,7 +244,8 @@
                 <nav class="container d-flex justify-content-between p-0 navbar
                     navbar-expand-lg" style="font-size: 0.6rem;">
 
-                    <div class="d-lg-none  d-flex justify-content-between w-100 py-2">
+                    <div class="d-lg-none d-flex justify-content-between w-100
+                        py-2">
                         <div class="d-lg-none d-flex">
                             <img src="img/Logo-Dai-Hoc-Ha-Long-UHL-V.png"
                                 alt="icon
@@ -261,7 +263,8 @@
                             <div class="container d-flex
                                 justify-content-between">
                                 <div></div>
-                                <div class="d-none d-sm-flex justify-content-end"
+                                <div class="d-none d-sm-flex
+                                    justify-content-end"
                                     style="position:
                                     relative;">
                                     <ul class="d-flex m-0" style="list-style:
@@ -293,26 +296,28 @@
                                             var(--blue-coler-1);"></div>
                                     </div>
                                     <div class="d-flex">
-                                    <button type="button"
-                                        class="form_search_button_hover m-auto">
-                                        <img src="img/icon/icons8-search.svg"
-                                            style="height:
-                                            1rem;" alt="icon-search">
-                                    </button>
+                                        <button type="button"
+                                            class="form_search_button_hover
+                                            m-auto">
+                                            <img
+                                                src="img/icon/icons8-search.svg"
+                                                style="height:
+                                                1rem;" alt="icon-search">
+                                        </button>
                                     </div>
 
 
                                 </div>
-                                                                    <button class="navbar-toggler" type="button"
-                                        data-toggle="collapse"
-                                        data-target="#navbarSupportedContent"
-                                        aria-controls="navbarSupportedContent"
-                                        aria-expanded="false" aria-label="Toggle
-                                        navigation">
-                                        <img src="img/icon/Menu.svg" alt=""
-                                            style="height:
-                                            1.7rem;">
-                                    </button>
+                                <button class="navbar-toggler" type="button"
+                                    data-toggle="collapse"
+                                    data-target="#navbarSupportedContent"
+                                    aria-controls="navbarSupportedContent"
+                                    aria-expanded="false" aria-label="Toggle
+                                    navigation">
+                                    <img src="img/icon/Menu.svg" alt=""
+                                        style="height:
+                                        1.7rem;">
+                                </button>
                             </div>
 
                         </div>
@@ -323,68 +328,139 @@
                     <div class="collapse navbar-collapse nav_item"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto pl-2">
-                                                            <div class="d-flex d-sm-none justify-content-end"
-                                    style="position:
-                                    relative;">
-                                    <ul class="d-flex m-0" style="list-style:
-                                        none;">
-                                        <li class="px-2 d-flex">
-                                            <a href="" class="m-auto">
-                                                <img
-                                                    src="img/icon/icons8-vietnam-96.png"
-                                                    alt="icon việt nam"
-                                                    style="height:
-                                                    1.2rem;">
-                                            </a>
-                                        </li>
-                                        <li class=" d-flex">
-                                            <a href="" class="m-auto">
-                                                <img
-                                                    src="img/icon/icons8-great-britain-96.png"
-                                                    alt="icon việt nam"
-                                                    style="height:
-                                                    1.2rem;">
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <div class="d-flex ml-2 mr-1">
-                                        <div class="m-auto" style="width:
-                                            0.05rem;
-                                            height: 1rem;
-                                            background-color:
-                                            var(--blue-coler-1);"></div>
-                                    </div>
-                                    <div class="d-flex">
+                            <div class="d-flex d-sm-none justify-content-end"
+                                style="position:
+                                relative;">
+                                <ul class="d-flex m-0" style="list-style:
+                                    none;">
+                                    <li class="px-2 d-flex">
+                                        <a href="" class="m-auto">
+                                            <img
+                                                src="img/icon/icons8-vietnam-96.png"
+                                                alt="icon việt nam"
+                                                style="height:
+                                                1.2rem;">
+                                        </a>
+                                    </li>
+                                    <li class=" d-flex">
+                                        <a href="" class="m-auto">
+                                            <img
+                                                src="img/icon/icons8-great-britain-96.png"
+                                                alt="icon việt nam"
+                                                style="height:
+                                                1.2rem;">
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="d-flex ml-2 mr-1">
+                                    <div class="m-auto" style="width:
+                                        0.05rem;
+                                        height: 1rem;
+                                        background-color:
+                                        var(--blue-coler-1);"></div>
+                                </div>
+                                <div class="d-flex">
                                     <button type="button"
                                         class="form_search_button_hover m-auto">
                                         <img src="img/icon/icons8-search.svg"
                                             style="height:
                                             1rem;" alt="icon-search">
                                     </button>
-                                    </div>
-
-
                                 </div>
+
+
+                            </div>
                             <li class="nav-item active">
-                                <a class="nav-link nav-link-father" href="#">Trang chủ</a>
+                                <a class="nav-link nav-link-father" href="#">Trang
+                                    chủ</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-father" href="#">Link</a>
-                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-father" href="#"
+                                <a class="nav-link
+                                    nav-link-father" href="#"
                                     role="button" data-toggle="dropdown"
                                     aria-expanded="false">
-                                    Dropdown
+                                    Giới thiệu
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item nav-link-child" href="#">Action</a>
-                                    <a class="dropdown-item nav-link-child" href="#">Another
-                                        action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item nav-link-child" href="#">Something
-                                        else here</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Lịch sử hình thành khoa</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Sứ mệnh tầm nhìn</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Cơ cấu tổ chức</a>
                                 </div>
+                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link
+                                    nav-link-father" href="#"
+                                    role="button" data-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Tin tức
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Hoạt động thường nhật</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Hoạt động liên chi đoàn</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Lịch công tác</a>
+                                </div>
+                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link
+                                    nav-link-father" href="#"
+                                    role="button" data-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Đào tạo - Nghiên cứu khoa học
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Chương trình đào tạo trình độ
+                                        đại học</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Chương trình đạo tạo trình độ
+                                        thạc sĩ</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Các công bố</a>
+                                </div>
+                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-father" href="#">Biểu
+                                    mẫu văn bản</a>
+
+                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link
+                                    nav-link-father" href="#"
+                                    role="button" data-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Sinh viên
+                                </a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Các hoạt động năm học</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Một số hình ảnh tiêu biểu
+                                        của khoa</a>
+                                    <a class="dropdown-item nav-link-child"
+                                        href="#">Góc sinh viên</a>
+                                </div>
+                            </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-father" href="#">Liên
+                                    hệ</a>
                             </li>
                         </ul>
                     </div>
