--- a/index.html
+++ b/index.html
@@ -1149,9 +1149,7 @@
                 <h1 class="txt-blue-3 text-center pt-3">Các hình ảnh hoạt động của khoa</h1>
                 <div class="underlined_div"></div>
                 <p class="text-center txt-blue-3 mt-3">
-                    tự hào mang đến môi trường giáo dục quốc tế với các chương
-                    trình giảng dạy bằng tiếng Anh và những ngành đào tạo khoa
-                    học công nghệ dẫn đầu xu hướng nguồn nhân lực thời Đại 4.0
+                    Khoa công nghệ thông tin Trường đại học Hạ Long là khoa luôn năng động và nghiệt huyết.
                 </p>
                 <div id="hoatdongkhoa" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="true">
                     <div class="carousel-inner">
