--- a/index.html
+++ b/index.html
@@ -463,7 +463,22 @@
                                 <a class="nav-link nav-link-father" href="#">Liên
                                     hệ</a>
                             </li>
+                            <div class="m-0" style="width: 0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
                         </ul>
+                        <div class="d-flex">
+                            <div class="m-0 d-none d-lg-block" style="width:
+                                0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                            <div class="nav-item">
+                                <a class="nav-link nav-link-father px-2" href="#">Đăng
+                                    nhập</a>
+                            </div>
+                            <div class="m-0 d-none d-lg-block" style="width:
+                                0.05rem;
+                                background-color: var(--blue-coler-1);"></div>
+                        </div>
+
                     </div>
                 </nav>
             </div>
@@ -521,7 +536,8 @@
                         <div class="d-flex flex-wrap">
                             <div class="pb-2 px-2 col-12 col-md-7">
                                 <div id="tintuc"
-                                    class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="true">
+                                    class="carousel slide" data-ride="carousel"
+                                    data-interval="2000" data-pause="true">
                                     <ol class="carousel-indicators m-0">
                                         <li
                                             data-target="#tintuc"
@@ -1004,21 +1020,29 @@
 
                         <div class="d-flex flex-column pt-2">
                             <div class="d-flex flex-wrap p-1">
-                            <div id="carouselExampleControls" data-ride="carousel" data-interval="2000" class="m-auto"
-                    data-pause="true">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <div class="d-flex w-100">
-                                        <img style="height: 6rem;" src="img/twitter.png" class="d-block m-auto" alt="...">
+                                <div id="carouselExampleControls"
+                                    data-ride="carousel" data-interval="2000"
+                                    class="m-auto"
+                                    data-pause="true">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <div class="d-flex w-100">
+                                                <img style="height: 6rem;"
+                                                    src="img/twitter.png"
+                                                    class="d-block m-auto"
+                                                    alt="...">
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item ">
+                                            <div class="d-flex w-100">
+                                                <img style="height: 6rem;"
+                                                    src="img/facebook.png"
+                                                    class="d-block m-auto"
+                                                    alt="...">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="carousel-item ">
-                                    <div class="d-flex w-100">
-                                        <img style="height: 6rem;" src="img/facebook.png" class="d-block m-auto" alt="...">
-                                    </div>
-                                </div>
-                            </div>
-                            </div>
                             </div>
                         </div>
 
@@ -1044,7 +1068,7 @@
                         width: 100%; background-position: center;
                         background-repeat: no-repeat; background-size: cover;
                         ">
-                        <div style="width: 15rem; height: 6rem;
+                        <a href="#" style="width: 15rem; height: 6rem;
                             background-color: #0086cdc2;" class="d-flex
                             flex-column m-auto rounded shadow-lg">
 
@@ -1056,7 +1080,7 @@
                                     dung</p>
                             </div>
 
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-6 col-12 d-flex flex-column p-0">
                         <div class="d-flex w-100 h-50" style="
@@ -1064,7 +1088,7 @@
                             background-position: center;
                             background-repeat: no-repeat; background-size:
                             cover;">
-                            <div style="width: 15rem; height: 6rem;
+                            <a href="" style="width: 15rem; height: 6rem;
                                 background-color: #0086cdc2;" class="d-flex
                                 flex-column m-auto rounded shadow-lg">
 
@@ -1076,14 +1100,14 @@
                                         dung</p>
                                 </div>
 
-                            </div>
+                            </a>
                         </div>
                         <div class="d-flex w-100 h-50" style="
                             background-image:
                             url(img/tintuc1.jpg);background-position: center;
                             background-repeat: no-repeat; background-size:
                             cover;">
-                            <div style="width: 15rem; height: 6rem;
+                            <a href="" style="width: 15rem; height: 6rem;
                                 background-color: #0086cdc2;" class="d-flex
                                 flex-column m-auto rounded shadow-lg">
 
@@ -1095,7 +1119,7 @@
                                         dung</p>
                                 </div>
 
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -1107,95 +1131,141 @@
                 <div class="underlined_div"></div>
                 <div class="mt-3 d-flex flex-wrap">
                     <div class="col-12 col-md-4 px-1 px-lg-3 pt-2">
-                        <div class="card w-100 h-100 shadow" style="background-color: #fff;">
-                            <img src="img/tintuc1.jpg" class="card-img-top" alt="..." style="aspect-ratio: 3/2;object-fit: cover;">
+                        <div class="card w-100 h-100 shadow"
+                            style="background-color: #fff;">
+                            <img src="img/tintuc1.jpg" class="card-img-top"
+                                alt="..." style="aspect-ratio: 3/2;object-fit:
+                                cover;">
                             <a href="" class="card-body pt-1">
-                                <h2 class="txt-blue-2 my-auto pt-1" style="height: 2.5rem; font-weight:600; color: var(--blue-coler-3); font-size: 0.7rem;">
+                                <h2 class="txt-blue-2 my-auto pt-1"
+                                    style="height: 2.5rem; font-weight:600;
+                                    color: var(--blue-coler-3); font-size:
+                                    0.7rem;">
                                     Tuyển sinh Đại học 2022 song bằng việt pháp
                                 </h2>
-                                <p class="card-text" style="font-size: 0.65rem; color: black;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text" style="font-size: 0.65rem;
+                                    color: black;">Some quick example text to
+                                    build on the card title and make up the bulk
+                                    of the card's content.</p>
                             </a>
                         </div>
                     </div>
 
                     <div class="col-12 col-md-4 px-1 px-lg-3 pt-2">
-                        <div class="card w-100 h-100 shadow" style="background-color: #fff;">
-                            <img src="img/tintuc1.jpg" class="card-img-top" alt="..." style="aspect-ratio: 3/2;object-fit: cover;">
+                        <div class="card w-100 h-100 shadow"
+                            style="background-color: #fff;">
+                            <img src="img/tintuc1.jpg" class="card-img-top"
+                                alt="..." style="aspect-ratio: 3/2;object-fit:
+                                cover;">
                             <a href="" class="card-body pt-1">
-                                <h2 class="txt-blue-2 my-auto pt-1" style="height: 2.5rem;font-weight:600; color: var(--blue-coler-3); font-size: 0.7rem;">
-                                    Tuyển sinh Đại học 2022 
+                                <h2 class="txt-blue-2 my-auto pt-1"
+                                    style="height: 2.5rem;font-weight:600;
+                                    color: var(--blue-coler-3); font-size:
+                                    0.7rem;">
+                                    Tuyển sinh Đại học 2022
                                 </h2>
-                                <p class="card-text" style="font-size: 0.65rem; color: black;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text" style="font-size: 0.65rem;
+                                    color: black;">Some quick example text to
+                                    build on the card title and make up the bulk
+                                    of the card's content.</p>
                             </a>
                         </div>
-                    </div>  
+                    </div>
                     <div class="col-12 col-md-4 px-1 px-lg-3 pt-2">
-                        <div class="card w-100 h-100 shadow" style="background-color: #fff;">
-                            <img src="img/tintuc1.jpg" class="card-img-top" alt="..." style="aspect-ratio: 3/2;object-fit: cover;">
+                        <div class="card w-100 h-100 shadow"
+                            style="background-color: #fff;">
+                            <img src="img/tintuc1.jpg" class="card-img-top"
+                                alt="..." style="aspect-ratio: 3/2;object-fit:
+                                cover;">
                             <a href="" class="card-body pt-1">
-                                <h2 class="txt-blue-2 my-auto pt-1" style="height: 2.5rem;font-weight:600; color: var(--blue-coler-3); font-size: 0.7rem;">
-                                    Tuyển sinh Đại học 2022 
+                                <h2 class="txt-blue-2 my-auto pt-1"
+                                    style="height: 2.5rem;font-weight:600;
+                                    color: var(--blue-coler-3); font-size:
+                                    0.7rem;">
+                                    Tuyển sinh Đại học 2022
                                 </h2>
-                                <p class="card-text" style="font-size: 0.65rem; color: black;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <p class="card-text" style="font-size: 0.65rem;
+                                    color: black;">Some quick example text to
+                                    build on the card title and make up the bulk
+                                    of the card's content.</p>
                             </a>
                         </div>
-                    </div>       
+                    </div>
                 </div>
             </div>
         </nav>
 
         <nav class="pt-3 pb-4">
             <div class="container d-flex flex-column">
-                <h1 class="txt-blue-3 text-center pt-3">Các hình ảnh hoạt động của khoa</h1>
+                <h1 class="txt-blue-3 text-center pt-3">Các hình ảnh hoạt động
+                    của khoa</h1>
                 <div class="underlined_div"></div>
                 <p class="text-center txt-blue-3 mt-3">
-                    Khoa công nghệ thông tin Trường đại học Hạ Long là khoa luôn năng động và nghiệt huyết.
+                    Khoa công nghệ thông tin Trường đại học Hạ Long là khoa luôn
+                    năng động và nghiệt huyết.
                 </p>
-                <div id="hoatdongkhoa" class="carousel slide" data-ride="carousel" data-interval="2000" data-pause="true">
+                <div id="hoatdongkhoa" class="carousel slide"
+                    data-ride="carousel" data-interval="2000" data-pause="true">
                     <div class="carousel-inner">
                         <a href="#" class="carousel-item active">
-                            <img src="img/tintuc1.jpg" class="d-block w-100" alt="...">
+                            <img src="img/tintuc1.jpg" class="d-block w-100"
+                                alt="...">
                         </a>
                         <a href="" class="carousel-item">
-                            <img src="img/tintuc2.jpg" class="d-block w-100" alt="...">
+                            <img src="img/tintuc2.jpg" class="d-block w-100"
+                                alt="...">
                         </a>
                         <a href="" class="carousel-item">
-                            <img src="img/tintuc1.jpg" class="d-block w-100" alt="...">
+                            <img src="img/tintuc1.jpg" class="d-block w-100"
+                                alt="...">
                         </a>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-target="#hoatdongkhoa" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <button class="carousel-control-prev" type="button"
+                        data-target="#hoatdongkhoa" data-slide="prev">
+                        <span class="carousel-control-prev-icon"
+                            aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-target="#hoatdongkhoa" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <button class="carousel-control-next" type="button"
+                        data-target="#hoatdongkhoa" data-slide="next">
+                        <span class="carousel-control-next-icon"
+                            aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </button>
                 </div>
             </div>
         </nav>
-        <nav class="d-flex flex-column justify-content-between" style="background-color: var(--blue-coler-4);">
+        <nav class="d-flex flex-column justify-content-between"
+            style="background-color: var(--blue-coler-4);">
             <div style="height: 1rem;"></div>
-            <div class="d-flex flex-wrap w-100 p-3 justify-content-between" style="background-color: var(--blue-coler-3);">
+            <div class="d-flex flex-wrap w-100 p-3 justify-content-between"
+                style="background-color: var(--blue-coler-3);">
                 <div class="d-flex flex-wrap">
                     <div class="d-flex flex-column pt-2">
-                        <p class="m-0 p-0" style="font-size: 0.6rem; color: #fff;">Khoa Công Nghệ thông tin <br>Trường Đại học Hạ Long</p>
+                        <p class="m-0 p-0" style="font-size: 0.6rem; color:
+                            #fff;">Khoa Công Nghệ thông tin <br>Trường Đại học
+                            Hạ Long</p>
                     </div>
-                    <div class="ml-4 mr-4" style="width: 0.05rem;background-color: var(--blue-coler-1);"></div>
+                    <div class="ml-4 mr-4" style="width:
+                        0.05rem;background-color: var(--blue-coler-1);"></div>
                     <div class="d-flex flex-column pt-2">
-                        <p class="m-0 p-0" style="font-size: 0.6rem; color: #fff;">Địa chỉ : Địa chỉ: Số tầng 4, nhà Hiệu bộ,<br> 
-                           Số 258, đường Bạch Đằng, phường Nam Khê - thành phố Uông Bí - tỉnh Quảng Ninh 
+                        <p class="m-0 p-0" style="font-size: 0.6rem; color:
+                            #fff;">Địa chỉ : Địa chỉ: Số tầng 4, nhà Hiệu bộ,<br>
+                            Số 258, đường Bạch Đằng, phường Nam Khê - thành phố
+                            Uông Bí - tỉnh Quảng Ninh
                         </p>
                     </div>
                 </div>
                 <div class="d-flex flex-column pt-2">
-                    <p class="m-0 p-0" style="font-size: 0.6rem; color: #fff;">Điện thoại : 0985 863 555
+                    <p class="m-0 p-0" style="font-size: 0.6rem; color: #fff;">Điện
+                        thoại : 0985 863 555
                         <br>Mail : khoacntt@daihochalong.edu.vn</p>
                 </div>
 
             </div>
-            <span style="font-size: 0.5rem; text-align: center; color: #fff;" class="pb-1 pt-1">Bản quyền thuộc về Đại học Hạ Long</span>
+            <span style="font-size: 0.5rem; text-align: center; color: #fff;"
+                class="pb-1 pt-1">Bản quyền thuộc về Đại học Hạ Long</span>
         </nav>
-        </body>
+    </body>
 
-    </html>
+</html>
