--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
 
         <nav class="d-flex flex-column py-3">
             <h1 class="txt-blue-3 text-center pt-3">Các hoạt động
-                và sự kiện của khoa học máy tính</h1>
+                và sự kiện</h1>
             <div class="underlined_div"></div>
             <div class="d-flex flex-wrap container pt-4">
                 <div class=" col-md-7 col-12 px-0 pt-2 d-flex flex-column">
