--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
                     }
                 };
             </script> -->
-	
-        </head>
+	</head>
 
 	<body>
 		<nav class="header">
@@ -213,7 +212,7 @@
 									color: var(--blue-coler-3);
 								"
 							>
-								KHOA CÔNG NGHỆ THÔNG TIN <br />TRƯỜNG Đại HỌC HẠ LONG
+								KHOA CÔNG NGHỆ THÔNG TIN <br />TRƯỜNG ĐẠI HỌC HẠ LONG
 							</p>
 						</div>
 						<div></div>
